src/stylesheet/main.styl
body
    background-color: #eaeaea
    margin 0
    font-family: 'Roboto Mono', monospace;

canvas
    width: 100%
    height: 100%

h1
    font-family sans-serif
    color #262626
    font-size 4em
    margin 150px 0 0 150px

.fps
    top 0
    left 0
    transform-origin: top left
    transform: scale(.7)

#newFile
  display: none

#informations
  padding:1em 2em
  position: absolute
  // text-transform:uppercase
  border-radius: 7px 7px 0px 0px;
  bottom: 0
  margin:auto
  left:0
  right:0
  width: 300px
  background: #597FCA
  color: white
  letter-spacing: 0.1em
  font-size: 1.3em
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

.helpers
  position: absolute
  bottom:0
  list-style:none

